data/derived/comb/progs/unify/prog6839.ml.out
Characters 426-428:
  | Abs v -> if eval(v, x, y) < 0.0 then eval(v, x, y) *. -1 else eval(v, x, y)
                                                          ^^
Error: This expression has type int but an expression was expected of type
         float
